--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
     "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/standalone": "^7.22.5",
     "@codemirror/lang-css": "^6.2.0",
-    "@codemirror/lang-html": "^6.4.4",
+    "@codemirror/lang-html": "^6.4.5",
     "@codemirror/lang-javascript": "^6.1.9",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@svgr/webpack": "^5.5.0",
@@ -40,6 +43,7 @@
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
     "mini-css-extract-plugin": "^2.4.5",
+    "path-browserify": "^1.0.1",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
@@ -148,6 +152,7 @@
   },
   "devDependencies": {
     "less": "^4.1.3",
-    "less-loader": "^11.1.2"
+    "less-loader": "^11.1.2",
+    "node-polyfill-webpack-plugin": "^2.0.1"
   }
 }
